protocolmodel/mcrl2/testing/errors/error_1003.mcf
% E1003 - Invalid data
[true* . LOG_ERROR(E1003)] false